Fixed layout issues

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -3,6 +3,7 @@
     font-size: 14px
 
 body
+    margin-top: 0px
     margin-left: 0px
     margin-right: 0px
 
